--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
