--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/workouts/Abs/images/
+    - assets/workouts/Arms/images/
+    - assets/workouts/Back/images/
+    - assets/workouts/Cardio/images/
+    - assets/workouts/Chest/images/
+    - assets/workouts/Flexibility/images/
+    - assets/workouts/Legs/images/
+    - assets/workouts/Shoulders/images/
+    - assets/workouts/Strength/images/
+    - assets/workouts/Challenges/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -92,7 +102,7 @@ flutter:
         - asset: assets/fonts/League_Spartan/LeagueSpartan-ExtraBold.ttf
           weight: 800
     - family: OpenSans
-      fonts:  
+      fonts:
         - asset: assets/fonts/Open_Sans/OpenSans-Regular.ttf
           weight: 400
         - asset: assets/fonts/Open_Sans/OpenSans-SemiBold.ttf
