--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/workouts/
     - assets/workouts/Abs/images/
     - assets/workouts/Arms/images/
     - assets/workouts/Back/images/
