--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,35 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"fittrackbykitswanto","appId":"1:147957760599:android:d9854374a04d45bcdd1912","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"fittrackbykitswanto","configurations":{"android":"1:147957760599:android:d9854374a04d45bcdd1912"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "fittrackbykitswanto",
+          "appId": "1:147957760599:android:d9854374a04d45bcdd1912",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "fittrackbykitswanto",
+          "configurations": {
+            "android": "1:147957760599:android:d9854374a04d45bcdd1912"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
+}
