--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.5.3
   image_picker: ^0.8.7+5
   image: ^4.0.17
+  flutter_stripe: ^12.1.1
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
