--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,19 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+/android/key.properties
+/android/app/*.jks
+
+# Firebase
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+
+# Env
+.env
+.env.*
+
+# Keystore
+*.jks
+*.keystore
+key.properties
